nonPH_analysis/PLS/logs/breps_pls424044.err
Traceback (most recent call last):
  File "/scratch/tyoeasley/brain_representations/src_py/run_lindecomp.py", line 2, in <module>
    import lindecomp_brainrep as LDBR
  File "/mnt/beegfs/scratch/tyoeasley/brain_representations/src_py/lindecomp_brainrep.py", line 96
    parser = switcher.get(argument, lambda argument: print("Unknown linear decomposition method: "+argument))
    ^
IndentationError: unexpected indent
